# mal-data-pipeline

./: .gitignore  .mcp.json  CLAUDE.md  README.md  main.py  modules.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
ai_data_analyst/: prompt.txt
dashboard/: app.py
dashboard/.streamlit/: config.toml
data/: mal.duckdb
pipeline/: pipeline.yml
pipeline/assets/ingest/: fetch_characters.py  fetch_descriptions.asset.yml  fetch_descriptions.py  fetch_episodes.py  fetch_statistics.py
pipeline/assets/load/: load_characters.py  load_descriptions.py  load_episodes.py  load_statistics.py
pipeline/assets/mart/: mart_anime.sql  mart_characters.sql  mart_episodes.sql
pipeline/assets/seeds/: dim_anime.asset.yml  dim_anime.csv
pipeline/assets/staging/: stg_characters.sql  stg_descriptions.sql  stg_episodes.sql  stg_statistics.sql
scripts/: export_to_duckdb.py  generate_seed.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
